--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
 
     <style name="FKButtonLightGrey">
         <item name="android:layout_margin">5dp</item>
-        <item name="android:background">@drawable/button2</item>
+        <item name="android:background">@color/transparent</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:padding">10dp</item>
         <item name="android:textAllCaps">false</item>
